{
    "name": "InputControls",
    "maps": [
        {
            "name": "MainMap",
            "id": "e57a89ef-b3cd-4ef5-b1dd-5784c50df843",
            "actions": [
                {
                    "name": "MoveControl",
                    "type": "Value",
                    "id": "58de6d6f-f35b-4549-b8b4-d1a8a96d73a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Button",
                    "type": "Button",
                    "id": "3eb4f1fb-6b5d-49dc-9ecf-41e8a1dc375c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "26ecd3ce-00c7-44fb-b21f-f2b64c1436d4",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65b6b974-7cae-4560-a054-7176e29ae914",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}